--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,6 +24,11 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="label_heading_bold" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/textColorPrimary</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
     <style name="body_text_style" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/textColorSecondary</item>
         <item name="android:textSize">16sp</item>
