--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,11 @@
 
     </style>
 
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@color/colorPrimary</item>
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+    </style>
+
     <style name="label_heading" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/textColorPrimary</item>
         <item name="android:textSize">20sp</item>
@@ -53,4 +58,29 @@
         <item name="android:paddingRight">10dp</item>
     </style>
 
+    <style name="radioButtonStyle" parent="Widget.AppCompat.CompoundButton.RadioButton">
+        <item name="android:buttonTint">@color/maroonish</item>
+    </style>
+
+    <style name="TextInputTheme" parent="Theme.AppCompat">
+        <!-- Hint color and label color in FALSE state -->
+        <item name="android:textColorHint">@color/lightGrey</item>
+        <item name="android:textSize">15sp</item>
+        <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
+        <item name="colorAccent">@android:color/black</item>
+        <item name="colorControlNormal">@android:color/black</item>
+        <item name="colorControlActivated">@android:color/black</item>
+    </style>
+
+    <style name="genderDefault" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/lightGrey</item>
+        <item name="android:textColor">@color/maroonish</item>
+
+    </style>
+
+    <style name="genderSelected" parent="Widget.AppCompat.Button">
+        <item name="android:background">@color/maroonish</item>
+        <item name="android:textColor">@color/white</item>
+
+    </style>
 </resources>
