--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,10 @@
     android:layout_height="match_parent">
 
     <include
-        layout="@layout/main_content_layout"/>
+        layout="@layout/main_content_layout"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
 
 
         <android.support.design.widget.NavigationView
