--- a/app/src/main/res/layout/fragment_event_main.xml
+++ b/app/src/main/res/layout/fragment_event_main.xml
@@ -1,33 +1,40 @@
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:background="@drawable/primary_gradient">
+    android:layout_height="match_parent">
 
-    <View
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/lightGrey"/>
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:background="@drawable/primary_gradient">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/events_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        app:tabTextColor="@color/lightGrey"
-        app:tabMode="scrollable"
-        app:tabIndicatorHeight="0dp"
-        android:background="@android:color/white">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/lightGrey"/>
 
-    </android.support.design.widget.TabLayout>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/events_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:tabTextColor="@color/lightGrey"
+            app:tabMode="scrollable"
+            app:tabIndicatorHeight="0dp"
+            android:background="@android:color/white">
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/events_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        </android.support.design.widget.TabLayout>
 
-    </android.support.v4.view.ViewPager>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/events_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-</LinearLayout>
+        </android.support.v4.view.ViewPager>
+
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
