--- a/app/src/main/res/layout/registration_1.xml
+++ b/app/src/main/res/layout/registration_1.xml
@@ -48,7 +48,8 @@
                 android:id="@+id/layout_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/TextInputTheme">
+                android:theme="@style/TextInputTheme"
+                >
                 <EditText
                     android:id="@+id/field_email"
                     android:layout_width="match_parent"
@@ -57,7 +58,8 @@
                     android:hint="Email - will be your username"
                     android:maxLines="1"
                     android:layoutDirection="ltr"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@color/textColorPrimary"
+                    />
             </android.support.design.widget.TextInputLayout>
 
 
@@ -76,6 +78,7 @@
                         android:hint="Password"
                         android:inputType="textPassword"
                         android:maxLines="1"
+                        android:textColor="@color/textColorPrimary"
                         />
                 </android.support.design.widget.TextInputLayout>
 
@@ -94,6 +97,7 @@
                         android:hint="Confirm Password"
                         android:inputType="textPassword"
                         android:maxLines="1"
+                        android:textColor="@color/textColorPrimary"
                         />
                 </android.support.design.widget.TextInputLayout>
 
@@ -107,9 +111,10 @@
                     android:id="@+id/field_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Name"
+                    android:hint="First Name"
                     android:inputType="textPersonName"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary"/>
             </android.support.design.widget.TextInputLayout>
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_father_name"
@@ -123,7 +128,38 @@
                     android:layout_height="match_parent"
                     android:hint="Fathers Name"
                     android:inputType="textPersonName"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary"/>
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/layout_middle_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:errorEnabled="true"
+                android:theme="@style/TextInputTheme">
+                <EditText
+                    android:id="@+id/field_middle_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Middle Name"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary"/>
+            </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/layout_last_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:errorEnabled="true"
+                android:theme="@style/TextInputTheme">
+                <EditText
+                    android:id="@+id/field_last_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="Last Name"
+                    android:inputType="textPersonName"
+                    android:maxLines="1"
+                    android:textColor="@color/textColorPrimary"/>
             </android.support.design.widget.TextInputLayout>
             <TextView
                 android:id="@+id/gender_title"
@@ -206,7 +242,7 @@
                         android:inputType="phone"
                         android:maxLines="1"
                         android:layoutDirection="ltr"
-                        android:textColor="@android:color/black" />
+                        android:textColor="@color/textColorPrimary" />
                 </android.support.design.widget.TextInputLayout>
             </RelativeLayout>
 
@@ -224,10 +260,11 @@
                     android:inputType="date"
                     android:maxLines="1"
                     android:layoutDirection="ltr"
-                    android:textColor="@android:color/black"
+                    android:textColor="@color/textColorPrimary"
                     android:backgroundTint="@color/lightGrey"
                     android:drawableRight="@drawable/ic_date_black_24px"
-                    android:drawableEnd="@drawable/ic_date_black_24px"/>
+                    android:drawableEnd="@drawable/ic_date_black_24px"
+                    />
             </android.support.design.widget.TextInputLayout>
 
             </LinearLayout>
