--- a/app/src/main/res/layout/registration_2.xml
+++ b/app/src/main/res/layout/registration_2.xml
@@ -42,7 +42,8 @@
             android:layout_height="match_parent"
             android:hint="Emirates ID"
             android:inputType="textPersonName"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/textColorPrimary"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -59,7 +60,7 @@
             android:layout_marginTop="10dp"
             android:paddingVertical="15dp"
             android:hint="City"
-            android:textColor="@android:color/black"/>
+            android:textColor="@color/textColorPrimary"/>
     </android.support.design.widget.TextInputLayout>
     <android.support.design.widget.TextInputLayout
         android:id="@+id/university_layout"
@@ -76,7 +77,7 @@
             android:hint="University"
             android:inputType="textPersonName"
             android:maxLines="1"
-            android:textColor="@android:color/black" />
+            android:textColor="@color/textColorPrimary" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -92,7 +93,8 @@
             android:layout_height="match_parent"
             android:hint="Major"
             android:inputType="textPersonName"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/textColorPrimary"/>
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -108,7 +110,8 @@
             android:layout_height="match_parent"
             android:hint="Sponsor"
             android:inputType="textPersonName"
-            android:maxLines="1" />
+            android:maxLines="1"
+            android:textColor="@color/textColorPrimary"/>
     </android.support.design.widget.TextInputLayout>
     <Button
         android:id="@+id/register_btn"
