--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,6 +66,7 @@
         <!-- Hint color and label color in FALSE state -->
         <item name="android:textColorHint">@color/lightGrey</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">@android:color/black</item>
         <item name="colorControlNormal">@android:color/black</item>
