--- a/app/src/main/res/layout/fragment_finished_events.xml
+++ b/app/src/main/res/layout/fragment_finished_events.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="netaq.com.zayedsons.events.finished.FinishedEvents">
+    tools:context=".views.events.finished.FinishedEvents">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
