--- a/app/src/main/res/drawable/circle_maroon_solid.xml
+++ b/app/src/main/res/drawable/circle_maroon_solid.xml
@@ -3,4 +3,7 @@
     android:shape="oval">
     <solid android:color="@color/maroonish"/>
     <size android:width="25dp" android:height="25dp"/>
+
+    <padding android:right="15dp" android:top="10dp"
+        android:left="15dp" android:bottom="10dp"/>
 </shape>
