--- a/app/src/main/res/layout/activity_login_mobile.xml
+++ b/app/src/main/res/layout/activity_login_mobile.xml
@@ -41,6 +41,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/phone_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -50,6 +51,7 @@
             android:paddingVertical="10dp">
 
             <com.hbb20.CountryCodePicker
+                android:id="@+id/code_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:ccp_showFlag="false"
@@ -60,6 +62,7 @@
             </com.hbb20.CountryCodePicker>
 
             <EditText
+                android:id="@+id/field_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter your Mobile Number"
@@ -71,12 +74,31 @@
                 android:inputType="phone"
                 />
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/btn_proceed"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/phone_layout"
+            app:srcCompat="@drawable/ic_arrow_forward_white"
+            android:background="@drawable/circle_maroon_solid"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="50dp"/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_marginBottom="-40dp"
             android:src="@drawable/city_image"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"
+
+            />
     </RelativeLayout>
 </RelativeLayout>
