--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -11,7 +11,7 @@
         android:layout_centerInParent="true"
         android:gravity="center_horizontal|center_vertical">
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/drawer_profile_image"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@drawable/dummy_user"
@@ -20,7 +20,7 @@
 
     </RelativeLayout>
     <ImageView
-        android:id="@+id/settings_icon"
+        android:id="@+id/drawer_settings_icon"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="15dp"
@@ -29,7 +29,7 @@
         android:layout_alignParentEnd="true"/>
 
     <ImageView
-        android:id="@+id/back_icon"
+        android:id="@+id/drawer_back_icon"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_margin="15dp"
