--- a/app/src/main/res/layout/registration_1.xml
+++ b/app/src/main/res/layout/registration_1.xml
@@ -61,14 +61,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textEmailAddress"
-                    android:hint="Email - will be your username"
+                    android:hint="Email*"
                     android:maxLines="1"
                     android:layoutDirection="ltr"
                     android:textColor="@color/textColorPrimary"
                     />
             </android.support.design.widget.TextInputLayout>
 
-            <!--Pwd & Confirm Pwd Layout-->
+            <!--Pwd & Confirm Pwd Layout Hidden Purposely-->
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/layout_pwd"
                     android:layout_width="match_parent"
@@ -119,7 +119,7 @@
                     android:id="@+id/field_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="First Name"
+                    android:hint="First Name*"
                     android:inputType="textPersonName"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"/>
@@ -134,7 +134,7 @@
                     android:id="@+id/field_father_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Fathers Name"
+                    android:hint="Fathers Name*"
                     android:inputType="textPersonName"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"/>
@@ -164,7 +164,7 @@
                     android:id="@+id/field_last_name"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="Last Name"
+                    android:hint="Last Name*"
                     android:inputType="textPersonName"
                     android:maxLines="1"
                     android:textColor="@color/textColorPrimary"/>
@@ -174,7 +174,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:text="Gender"
+                android:text="Gender*"
                 android:textSize="16sp"
                 android:textColor="@color/lightGrey"
                  />
@@ -216,11 +216,13 @@
 
             </RelativeLayout>
 
+            <!--Phone Number Layout (Hidden purposely) Starts-->
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                android:visibility="gone">
 
                 <com.hbb20.CountryCodePicker
                     android:id="@+id/ccp"
@@ -253,6 +255,7 @@
                         android:textColor="@color/textColorPrimary" />
                 </android.support.design.widget.TextInputLayout>
             </RelativeLayout>
+        <!--Phone Number Layout Ends-->
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layout_date"
