Partial Event List implemented

--- a/app/src/main/res/layout/activity_login_mobile.xml
+++ b/app/src/main/res/layout/activity_login_mobile.xml
@@ -75,7 +75,7 @@
                         android:id="@+id/field_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Enter your Mobile Number"
+                        android:hint="55 1234567"
                         android:layout_gravity="center_vertical"
                         android:textAlignment="center"
                         android:paddingVertical="10dp"
