--- a/app/src/main/res/layout/fragment_event_main.xml
+++ b/app/src/main/res/layout/fragment_event_main.xml
@@ -27,14 +27,18 @@
             android:background="@android:color/white">
 
         </android.support.design.widget.TabLayout>
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/events_swipe_refresh"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/events_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/events_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        </android.support.v4.view.ViewPager>
-
+            </android.support.v4.view.ViewPager>
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
