--- a/app/src/main/res/layout/fragment_event_main.xml
+++ b/app/src/main/res/layout/fragment_event_main.xml
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:tabTextColor="@color/lightGrey"
-            app:tabMode="scrollable"
+            app:tabGravity="center"
+            app:tabMode="fixed"
             app:tabIndicatorHeight="0dp"
             android:background="@android:color/white">
 
