--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,8 @@
 
     <style name="label_heading" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/textColorPrimary</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/poppins</item>
     </style>
 
     <style name="label_heading_bold" parent="TextAppearance.AppCompat">
@@ -48,6 +49,7 @@
     <style name="body_text_style" parent="TextAppearance.AppCompat">
         <item name="android:textColor">@color/textColorSecondary</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
     </style>
 
     <style name="maroonishButtonStyle" parent="Widget.AppCompat.Button">
