--- a/app/src/main/res/layout/activity_event_qr.xml
+++ b/app/src/main/res/layout/activity_event_qr.xml
@@ -12,48 +12,70 @@
 
         <include layout="@layout/custom_toolbar"/>
 
-        <android.support.v7.widget.CardView
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/qr_swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
-            android:background="@color/white"
-            app:cardCornerRadius="10dp">
+            android:layout_margin="20dp">
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:padding="20dp">
-                <TextView
-                    android:id="@+id/tag_event"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Event"
-                    style="@style/tagStyle"/>
+                    android:background="@color/white"
+                    app:cardCornerRadius="10dp">
 
-                <TextView
-                    android:id="@+id/field_event_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:text="UAE Food Lovers"
-                    style="@style/label_heading"/>
-                <include layout="@layout/event_time_layout"/>
-                
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:layout_marginTop="40dp"
-                    android:src="@drawable/static_qr_image"
-                    android:layout_gravity="center_horizontal"/>
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="140dp"
-                    android:layout_marginTop="20dp"
-                    android:src="@drawable/pic_n_name"
-                    android:layout_gravity="center_horizontal"
-                    android:scaleType="centerInside"/>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:padding="20dp">
+                        <TextView
+                            android:id="@+id/tag_event"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Event"
+                            style="@style/tagStyle"/>
+
+                        <TextView
+                            android:id="@+id/field_event_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:text="UAE Food Lovers"
+                            style="@style/label_heading"/>
+                        <include layout="@layout/event_time_layout"/>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:paddingTop="40dp">
+                            <FrameLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+                            <ImageView
+                                android:id="@+id/iv_qr"
+                                android:layout_width="200dp"
+                                android:layout_height="200dp"
+                                android:layout_gravity="center_horizontal"/>
+
+                                <ProgressBar
+                                    android:id="@+id/progress"
+                                    android:layout_width="40dp"
+                                    android:layout_height="40dp"
+                                    android:layout_gravity="center_horizontal|center_vertical"
+                                    />
+                            </FrameLayout>
+                            <ImageView
+                                android:layout_width="200dp"
+                                android:layout_height="140dp"
+                                android:layout_marginTop="20dp"
+                                android:src="@drawable/pic_n_name"
+                                android:layout_alignParentBottom="true"
+                                android:layout_centerHorizontal="true"
+                                android:scaleType="centerInside"/>
+
+                    </RelativeLayout>
+                    </LinearLayout>
+                </android.support.v7.widget.CardView>
+        </android.support.v4.widget.SwipeRefreshLayout>
     </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
