--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="lightGrey">#d6d6d6</color>
     <color name="textColorPrimary">#4d4141</color>
     <color name="textColorSecondary">#d6d6d6</color>
+    <color name="hintColor">#d2d2d2</color>
 </resources>
